<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.playposse.thomas.lindenmayer.activity.TurtleTrainingFragment">

    <com.playposse.thomas.lindenmayer.ui.FractalView
        android:id="@+id/turtle_play_area"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"/>

    <EditText
        android:id="@+id/turtle_instructions_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textNoSuggestions" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2">

        <Button
            android:id="@+id/draw_line_button"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/turtle_tutorial_f_button"/>

        <Button
            android:id="@+id/invisible_line_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:text="@string/turtle_tutorial_invisible_f_button"/>

        <Button
            android:id="@+id/plus_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:text="@string/turtle_tutorial_plus_button"/>

        <Button
            android:id="@+id/minus_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:text="@string/turtle_tutorial_minus_button"/>

        <Button
            android:id="@+id/next_color_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:text="@string/turtle_tutorial_next_color_button"/>

        <Button
            android:id="@+id/previous_color_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:text="@string/turtle_tutorial_previous_button"/>

        <Button
            android:id="@+id/increase_stroke_width_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:text="@string/turtle_tutorial_increase_stroke_width_button"/>

        <Button
            android:id="@+id/decrease_stroke_width_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:text="@string/turtle_tutorial_decrease_stroke_width_button"/>

        <Button
            android:id="@+id/red_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:text="@string/turtle_tutorial_red_button"/>

        <Button
            android:id="@+id/green_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:text="@string/turtle_tutorial_green_button"/>

        <Button
            android:id="@+id/black_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:text="@string/turtle_tutorial_black_button"/>


        <Button
            android:id="@+id/turn_around_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:text="@string/turtle_tutorial_turn_around_button"/>
    </GridLayout>
</LinearLayout>
