<resources>
    <string name="app_name" translatable="false">L-System Studio</string>

    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_application_id" translatable="false">140249233402944</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb140249233402944</string>

    <string name="cant_delete_rule_set_toast">The rule set hasn\'t been saved.</string>
    <string name="delete_toast">%1$s has been deleted.</string>

    <string name="help_menu_title">Help</string>
    <string name="delete_menu_title">Delete</string>
    <string name="share_menu_title">Share</string>
    <string name="save_menu_title">Save</string>
    <string name="publish_menu_title">Publish</string>
    <string name="refresh_menu_title">Refresh</string>
    <string name="send_feedback_menu_title">Send feedback</string>
    <string name="send_us_your_best_menu_title">Send us your best</string>
    <string name="logout_menu_title">Logout</string>

    <!-- Main activity -->
    <string name="welcome_newbies">If you are new to L-Systems:</string>
    <string name="watch_video">&#x2022; Watch the <a href="">introduction video.</a></string>
    <string name="read_help">&#x2022; Read the <a href="">help section.</a></string>
    <string name="learn_turtle_trainer">&#x2022; Learn with the <a href="">turtle trainer.</a></string>
    <string name="welcome_experienced">If you know L-Systems:</string>
    <string name="check_out_samples">&#x2022; Check out the <a href="">samples</a>.</string>
    <string name="create_your_own">&#x2022; Create your <a href="">own rules</a>.</string>
    <string name="see_community_contributions">&#x2022; See <a href="">community contributions</a>.</string>

    <string name="help_about_heading">About</string>
    <string name="help_about_body_text">An L-system or Lindenmayer system is a parallel rewriting system and a type of formal grammar. An L-system consists of an alphabet of symbols that can be used to make strings, a collection of production rules that expand each symbol into some larger string of symbols, an initial &quot;axiom&quot; string from which to begin construction, and a mechanism for translating the generated strings into geometric structures. L-systems were introduced and developed in 1968 by Aristid Lindenmayer, a Hungarian theoretical biologist and botanist at the University of Utrecht. Lindenmayer used L-systems to describe the behaviour of plant cells and to model the growth processes of plant development. L-systems have also been used to model the morphology of a variety of organisms[1] and can be used to generate self-similar fractals such as iterated function systems.</string>
    <string name="help_wikipedia_link">https://en.wikipedia.org/wiki/L-system</string>
    <string name="help_grammar_heading">Supported Grammar</string>
    <string name="help_grammar_body_text">f: Draw a line.\nF: Move without drawing a line.\n+: Turn right.\n-: Turn left.\n|: Turn around (rotate  180 degrees).\n[: Save state (position and direction).\n]: Restore state.\n&gt;: Increment color.\n&lt;: Decrement color.\ncxx: Sets a specific color, e.g. c11.\n{: Increase the line thickness.\n}: Decrease the line thickness.</string>
    <string name="help_color_palette_heading">Color Palette</string>
    <string name="help_stochastic_heading">Stochastic Algorithms</string>
    <string name="help_stochastic_body_text">Lindenmayer Systems are used to render plants. While plants are self-similar, they also grow randomly. The random grows is simulated with stochastic algorithms. More than one replacement rule can match the same character. One of these rules is picked at random. You can draw down on the screen to refresh the drawing. Example: \'f\' -> \'f+f\' and \'f\' -> \'f-f\'. The turtle will go half the time left and half the time right.</string>
    <string name="help_book_heading">Book: The Algorithmic Beauty Of Plants</string>
    <string name="help_book_body_text">The most gorgeous and comprehensive book on Lindenmayer systems is available for free as a PDF.</string>
    <string name="help_book_link">http://algorithmicbotany.org/papers/abop/abop.pdf</string>
    <string name="help_contact_heading">Contact</string>
    <string name="help_contact_body_text">This is my first Android app. Feedback is welcome.\n\nThomas Fischer\nthomas@playposse.com\n\n© 2016 Thomas Fischer all rights reserved.</string>
    <string name="help_credit_heading">Credits</string>
    <string name="help_credit_body_text">Some of the icons are from http://thenounproject.com.\n
        \nVideo by \'i cons\' from the Noun Project
        \nturtle by Alex Furgiuele from the Noun Project
        \nColor Swatch by Kaitlin Till-Landry from the Noun Project
        \nhide by Sergio Aguado from the Noun Project
    </string>

    <!-- Rules activity -->
    <string name="rules_activity_axiom_label">Axiom</string>
    <string name="rules_activity_rotation_label">Rotation increment (in degrees)</string>
    <string name="rules_activity_rules_label">Rules</string>
    <string name="rules_activity_preview">Preview</string>
    <string name="rules_activity_preview_content_description">A preview rendering of the current rule set.</string>
    <string name="rules_activity_match_content_description">Match this character.</string>
    <string name="rules_activity_replacement_content_description">Replace with this string.</string>
    <string name="rules_activity_angle_error">Please, enter an angle between 1 and 359 degrees.</string>
    <string name="rules_activity_required_value_error">Please, enter a value.</string>
    <string name="rules_activity_overwrite_warning_title">Confirm</string>
    <string name="rules_activity_overwrite_warning_message">A rule set with that name already exists. Do you want to continue?</string>
    <string name="published_name_exists_toast">Another user has already chosen the name \'%1$s\'.</string>
    <string name="rule_set_saved_toast">%1$s saved.</string>
    <string name="not_ready_to_publish">Your rule set is incomplete.</string>

    <!-- Render activity -->
    <string name="progress_bar_title">Counting sheep…</string>
    <string name="stochastic_toast">Detected stochastic rule set. Swipe down to render another version.</string>
    <string name="fractal_content_description">Rendering of the L-System.</string>
    <string name="progress_steps">%1$d/%2$d</string>
    <string name="share_message">Check out this cool L-System!"</string>
    <string name="increment_button_content_description">Increments the iteration count.</string>
    <string name="decrement_button_content_description">Decrements the iteration count.</string>

    <string name="feedback_dialog_title">Send us feedback!</string>
    <string name="feedback_dialog_message">An e-mail will be opened where you can send me feedback.</string>
    <string name="feedback_email_recipient">thomas@playposse.com</string>
    <string name="feedback_email_subject">Feedback About Studio \"L\" Android App</string>
    <string name="feedback_email_body">Please, send me your feedback. This is my first Android application. I care about hearing from you.</string>

    <string name="send_us_your_best_dialog_title">Send us your best rule set!</string>
    <string name="send_us_your_best_dialog_message">Did you find a really cool rule set? Send it to me. I might include it in the next version.</string>
    <string name="send_us_your_best_email_recipient">thomas@playposse.com</string>
    <string name="send_us_your_best_email_subject">I found a really cool rule set!</string>
    <string name="send_us_your_best_email_body">Okay, you got us already curious and excited to see what you found. Be sure to include the encoded rule set below. Pro tip: Think of a rad name for it!</string>

    <string name="turtle_trainer_dialog_title">Turtle Trainer</string>
    <string name="turtle_Trainer_Dialog_message">In this interactive screen, you will learn by experimenting how letters are translated to drawing.</string>
    <string name="turtle_tutorial_f_button">f: Draw line.</string>
    <string name="turtle_tutorial_invisible_f_button">F: Move invisibly.</string>
    <string name="turtle_tutorial_plus_button">+: Turn left.</string>
    <string name="turtle_tutorial_minus_button">-: Turn right.</string>
    <string name="turtle_tutorial_increase_stroke_width_button">{: Fatter line.</string>
    <string name="turtle_tutorial_decrease_stroke_width_button">}: Thinner line.</string>
    <string name="turtle_tutorial_next_color_button"><![CDATA[<: Next color.]]></string>
    <string name="turtle_tutorial_previous_button"><![CDATA[>: Previous color.]]></string>
    <string name="turtle_tutorial_red_button">c18: Red.</string>
    <string name="turtle_tutorial_green_button">c10: Green.</string>
    <string name="turtle_tutorial_black_button">C0: Black</string>
    <string name="turtle_tutorial_turn_around_button">|: Turn around.</string>

    <!-- On-boarding activity -->
    <string name="background_content_description">A soft gradient for the background.</string>
    <string name="getting_started_button">Get started</string>
    <string name="introduction_slide0_content_description">An on-boarding image that shows L-system renderings.</string>
    <string name="introduction_slide1_content_description">An on-boarding image that the turtle grammar.</string>
    <string name="introduction_slide2_content_description">An on-boarding image that shows string re-writing.</string>

    <!-- Samples library activity -->
    <string name="no_samples_message">
        There are no samples. Something went wrong. Try deleting the app data and restart the app.
    </string>

    <!-- Public library activity -->
    <string name="credit_line">by %1$s</string>
    <string name="profile_photo_content_description">Profile photo of the user who submitted the L-System.</string>
    <string name="like_content_description">An heart shaped icon that allows the user to like a rule set.</string>
    <string name="public_library_hint">The community has shared these rule sets with you.\n\nYou can share rule sets, too! Create your own rule set invention and click the publish action!</string>

    <!-- Toasts -->
    <string name="rule_set_import_failed">Importing the rule sets failed :(</string>
    <string name="rule_set_published_successfully">The rule set \'%1$s\' has been published successfully.</string>

    <!-- Navigation drawer -->
    <string name="navigation_header_content_description">Ornamental header graphics</string>
    <string name="drawer_open">Navigation drawer opens</string>
    <string name="drawer_close">Navigation drawer closes</string>

    <!-- Navigation menu -->
    <string name="introduction_menu_group">Introduction</string>
    <string name="video_tutorial_menu_item">Video tutorial</string>
    <string name="turtle_tutorial_menu_item">Turtle graphics tutorial</string>
    <string name="new_rule_set_menu_item">New</string>
    <string name="rule_sets_menu_group">Rule Sets</string>
    <string name="samples_menu_item">Samples</string>
    <string name="my_rule_sets_menu_item">My library</string>
    <string name="public_rule_sets_menu_item">Public library</string>

    <!-- Survey snackbar -->
    <string name="survey_snack_bar_prompt">Help me improve the app!</string>
    <string name="survey_snack_bar_action">Take survey</string>

    <!-- Dialogs -->
    <string name="cancel_button_label">Cancel</string>
    <string name="ok_button_label">OK</string>
    <string name="dialog_continue_button">Continue</string>
    <string name="dialog_cancel_button">Cancel</string>

    <string name="publish_rule_set_dialog_title">Publish rule set</string>
    <string name="publish_rule_set_dialog_message">This will share your rule set with the L-System community. Be part the research community!</string>

    <string name="incomplete_rules_set_dialog_title">Can\'t save</string>
    <string name="incomplete_rules_set_dialog_message">Please, create valid rules first.</string>

    <string name="save_rule_set_dialog_title">Save</string>
    <string name="save_rule_set_dialog_message">Please, provide a name for the rule set.</string>

    <string name="empty_rule_set_name_dialog_title">No name entered</string>
    <string name="empty_rule_set_name_dialog_message">Try again and enter a name.</string>

    <string name="name_missing_dialog_title">Name missing!</string>
    <string name="name_missing_dialog_message">Please, save the rule set first to give it a name.</string>

    <!-- Widget -->
    <string name="daily_rendering_content_description">Highlights a different L-System each day in a widget.</string>
    <string name="daily_message">Today\'s rule set: %1$s</string>

    <!-- Common strings -->
    <string name="rule_set_preview_content_description">Renders the preview of a rule set.</string>
    <string name="no_private_rule_sets_message">When you save your own rule set, it will show up here.</string>
    <string name="no_public_rule_sets_message">Nobody has shared any rule sets yet.\n\nBe daring, come up with an innovative rule set and share it!</string>
    <string name="loading_message">Loading community contributions</string>
    <string name="dismiss_link">Dismiss</string>
</resources>
