<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="0">

        <TableRow>

            <EditText
                android:id="@+id/fileNameText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true" />

            <ImageView
                android:id="@+id/saveButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_save_black_24dp"
                android:paddingRight="12dp"
                android:clickable="true" />
        </TableRow>
    </TableLayout>

</LinearLayout>