<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_save"
        android:icon="@drawable/ic_save_black_24dp"
        android:title="Save"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="com.example.thomas.lindenmayer.widgets.SaveView" />

</menu>